[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dome-core"
version = "0.1.0"
description = "Shared Python library for the DOME portfolio — logging, Sentry, Supabase, governance models, LLM provider abstraction."
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.7.0",
    "structlog>=24.2.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "supabase>=2.5.0",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
all = ["dome-core[anthropic]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dome_core"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
